@@ -7,6 +7,8 @@ sox-11gamma.
 sox-12.18.3
 -----------
   o Fix writing MP3 files on AMD64 processors.
+  o More fixes to MP3 tag reading.  Sometimes tags were
+    detected as valid MP3 frames.
 
 sox-12.18.2
 -----------
